-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Fix Version/s: 0.4.8
-
Component/s: Filesystems
-
Labels:None
Simple test: issue chkdsk in a cmd prompt.
By default, it will start a check chkdsk on C:\. So, only a check, no repair.
As the volume is in use, it will find errors (expected). But, our VFATLIB will still attempt to fix them, and will destroy the volume.
- relates to
-
CORE-14087 chkdsk c: -f seems to have problems with reactos 0.4.7
-
- Resolved
-