[VFATLIB] Never touch the file system if not in interactive or RW mode. It's critical not to perform any write on a volume without an exclusive lock on it. That lock is only acquired if ChkDsk is started in RW mode. Also added an assert in write routine, to make sure that when we're about to perform a write operation, we're really allowed to do so.

This will avoid volume corruptions when a simple "chkdsk" is issued from cmd.
To put it simple: check will really check now, and won't attempt any repair.

CORE-14119